    gettext()). (Florian Engelhardt)

- LDAP:
  . Fixed memory leaks. (ptomulik)

- OPcache:
  . Fixed bug #73060 (php failed with error after temp folder cleaned up).
    (cmb)

- Standard:
  . Fixed bug #79930 (array_merge_recursive() crashes when called with array
    with single reference). (Nikita)
  . Fixed bug #79944 (getmxrr always returns true on Alpine linux). (Nikita)

- XML:
  . Fixed bug #79922 (Crash after multiple calls to xml_parser_free()). (cmb)

06 Aug 2020, PHP 7.3.21

- Apache:
  . Fixed bug #79030 (Upgrade apache2handler's php_apache_sapi_get_request_time
    to return usec). (Herbert256)

- Core:
  . Fixed bug #79877 (getimagesize function silently truncates after a null 
    byte) (cmb)
  . Fixed bug #79778 (Assertion failure if dumping closure with unresolved
    static variable). (Nikita)
  . Fixed bug #79792 (HT iterators not removed if empty array is destroyed).
    (Nikita)

- COM:
  . Fixed bug #63208 (BSTR to PHP string conversion not binary safe). (cmb)
  . Fixed bug #63527 (DCOM does not work with Username, Password parameter).
    (cmb)

- Curl:
  . Fixed bug #79741 (curl_setopt CURLOPT_POSTFIELDS asserts on object with
    declared properties). (Nikita)

- Fileinfo:
  . Fixed bug #79756 (finfo_file crash (FILEINFO_MIME)). (cmb)

- FTP:
  . Fixed bug #55857 (ftp_size on large files). (cmb)

- Mbstring:
  . Fixed bug #79787 (mb_strimwidth does not trim string). (XXiang)

- Phar:
  . Fixed bug #79797 (Use of freed hash key in the phar_parse_zipfile
    function). (CVE-2020-7068) (cmb)

- Standard:
  . Fixed bug #70362 (Can't copy() large 'data://' with open_basedir). (cmb)
  . Fixed bug #79817 (str_replace() does not handle INDIRECT elements). (Nikita)
  . Fixed bug #78008 (dns_check_record() always return true on Alpine).
    (Andy Postnikov)

09 Jul 2020, PHP 7.3.20

- Core:
  . Fixed bug #79650 (php-win.exe 100% cpu lockup). (cmb)
  . Fixed bug #79668 (get_defined_functions(true) may miss functions). (cmb,
    Nikita)